# nx-launchpad

./: .env.example  .gitattributes  .gitignore  .nxignore  CLAUDE.md  README.md  nx.json  package-lock.json  package.json  tsconfig.base.json
.claude/commands/: dev-onboard.md  generate-astro-cloudflare-app.md  generate-node-app.md  generate-python-app.md  generate-react-cloudflare-app.md  onboard.md  setup-auth-service.md  teardown-auth-service.md  teardown-onboarding.md
.github/workflows/: cf-preview-deploy.yml  ci-lint_build_test.yml  deploy.yml  preview-deploy.yml  sync-auth-secrets.yml
.husky/: pre-push  prepare-commit-msg
apps/example-astro-website/: package.json  project.json  wrangler.jsonc
apps/example-node-cli/: eslint.config.js  package.json  project.json  tsconfig.json  vitest.config.ts
apps/example-python-cli/: project.json  pyproject.toml
apps/example-python-cli/infra/environments/production/: .terraform.lock.hcl  backend.tf  main.tf  variables.tf
apps/example-python-cli/infra/environments/staging/: backend.tf  main.tf  variables.tf
apps/example-python-cli/infra/services/: main.tf  variables.tf
apps/example-python-cli/src/example_python_cli/: main.py
apps/example-python-cli/tests/: test_main.py
apps/example-react-webapp/: README.md  index.html  package-lock.json  package.json  project.json  tsconfig.app.json  (+4 more)
config/: README.md  default.yaml  local.yaml  production.yaml  project.json  staging.yaml  tsconfig.json  vitest.config.ts
docs/: DEPLOYMENTS.md  TESTING-ONBOARDING.md
scripts/: setup.sh
tools/: generators.json  package.json
(+246 files in other folders)
