[project]
name = "example-python-cli"
version = "0.1.0"
description = "Example Python/uv CLI application"
requires-python = ">=3.12.3"
dependencies = []

[project.scripts]
example-python-cli = "example_python_cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/example_python_cli"]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.9.0",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
